syntax = "proto3";

message GmKickReq {
    string userId = 1;
}