syntax = "proto3";

message GmKickResp {
}