syntax = "proto3";

message HeartBeatResp {
    int32 code = 1;
}