syntax = "proto3";

message LoginReq {
    string account = 1;
    string password = 2;
}