syntax = "proto3";

message LoginResp {

    int32 code = 1;

}