syntax = "proto3";

message LogoutReq {

}