syntax = "proto3";

message LogoutResp {
    int32 code = 1;
}