syntax = "proto3";

message PrivateChatReq {
    int64 toUserId = 1;
    string text = 2;
}