syntax = "proto3";

message PrivateChatResp {
    int64 fromUserId = 1;
    string text = 2;
}