syntax = "proto3";

message RegisterReq {
    string account = 1;
    string password = 2;
}